--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,12 @@ targetCompatibility = 1.6
 
 
 repositories {
-        
+     maven { url "https://jitpack.io" }
      maven { url "http://repo.maven.apache.org/maven2" }
 }
 dependencies {
-    compile group: 'net.technicpack', name: 'launchercore', version:'2.0.0-SNAPSHOT'
+    //compile group: 'net.technicpack', name: 'launchercore', version:'2.0.0-SNAPSHOT'
+    compile 'com.github.disconsented:LauncherCore:-SNAPSHOT'
     compile group: 'com.beust', name: 'jcommander', version:'1.30'
     compile group: 'org.yaml', name: 'snakeyaml', version:'1.11'
     compile group: 'org.swinglabs', name: 'swing-layout', version:'1.0.3'
