--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,21 @@ dependencies {
     compile group: 'org.swinglabs', name: 'swing-layout', version:'1.0.3'
     compile group: 'org.swinglabs', name: 'swing-worker', version:'1.1'
 }
+
+// Source Jar
+task sourceJar(type: Jar) {
+    from sourceSets.main.allSource
+    classifier = 'sources'
+}
+
+// Javadoc Jar
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    from javadoc.destinationDir
+    classifier = 'javadoc'
+}
+
+tasks.build.dependsOn sourceJar, javadocJar
+
+tasks.withType(JavaCompile) { task ->
+    task.options.encoding = 'UTF-8'
+}
