--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,7 @@ repositories {
      maven { url "http://repo.maven.apache.org/maven2" }
 }
 dependencies {
-    //compile group: 'net.technicpack', name: 'launchercore', version:'2.0.0-SNAPSHOT'
-    compile 'com.github.disconsented:LauncherCore:-SNAPSHOT'
+    compile project(':LauncherCore')
     compile group: 'com.beust', name: 'jcommander', version:'1.30'
     compile group: 'org.yaml', name: 'snakeyaml', version:'1.11'
     compile group: 'org.swinglabs', name: 'swing-layout', version:'1.0.3'
